# pseudo-backtrace

./: .gitignore  Cargo.toml  README.md  rust-toolchain.toml
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: pull_request.yaml  release.yaml
examples/: located_as_both.rs  simple.rs  thiserror.rs  three_layer.rs
pseudo-backtrace-derive/: Cargo.toml  DESIGN.md  MEMO.md
pseudo-backtrace-derive/src/: ast.rs  attr.rs  expand.rs  lib.rs
pseudo-backtrace-derive/tests/: trybuild.rs
pseudo-backtrace-derive/tests/trybuild/fail/: duplicate_location.rs  duplicate_source.rs  duplicate_source.stderr  missing_location.rs  missing_location.stderr  tuple_missing_attrs.rs  unit_variant.rs
pseudo-backtrace-derive/tests/trybuild/pass/: enum_variants.rs  generic_fallback.rs  simple_struct.rs
pseudo-error-derive/: Cargo.toml
pseudo-error-derive/src/: lib.rs
pseudo-error-derive/tests/trybuild/fail/: duplicate_location.rs  duplicate_location.stderr  duplicate_source.rs  missing_location.rs  missing_location.stderr  tuple_missing_attrs.rs  tuple_missing_attrs.stderr  unit_variant.rs
pseudo-error-derive/tests/trybuild/pass/: enum_variants.rs  generic_fallback.rs  simple_struct.rs
src/: lib.rs  private.rs
tests/trybuild/fail/: duplicate_location.rs  duplicate_location.stderr  duplicate_source.rs  duplicate_source.stderr  duplicate_stack_error_std.rs  duplicate_stack_error_std.stderr  invalid_stack_error_arg.rs  invalid_stack_error_arg.stderr  missing_location.rs  missing_location.stderr  multiple_std.rs  multiple_std.stderr  stacked_without_trait.rs  stacked_without_trait.stderr  std_without_error.rs  std_without_error.stderr  tuple_missing_attrs.rs  tuple_missing_attrs.stderr  unit_variant.rs  unit_variant.stderr
tests/trybuild/pass/: boxed_error.rs  boxed_stacked.rs  enum_variants.rs  generic_fallback.rs  inferred_source.rs  located_error.rs  option_stacked.rs  option_struct.rs  simple_struct.rs  tuple_struct.rs
