[workspace]
members = ["./pseudo-error-derive"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/tunamaguro/pseudo-backtrace"

[package]
name = "pseudo-backtrace"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }


[dependencies]
