[workspace]
members = ["./pseudo-backtrace-derive"]
resolver = "3"

[package]
name = "pseudo-backtrace"
description = "Utilities for constructing stack-like error chains with caller locations"
categories = ["no-std"]
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }


[dependencies]
pseudo-backtrace-derive = { version = "=0.1.0", path = "pseudo-backtrace-derive" }

[dev-dependencies]
thiserror = "2.0"
trybuild = "1.0.111"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/tunamaguro/pseudo-backtrace"
